docs: fix align component page header and css

--- a/docs/main.css
+++ b/docs/main.css
@@ -78,15 +78,19 @@ strong {
 }
 
 header.band {
-  background-color:
-    var(
-      --pf-c-page__main-section--BackgroundColor,
-      var(
-        --pf-c-page__main-section--m-light-100--BackgroundColor,
-        var(--pf-global--BackgroundColor--150, #fafafa)));
+  background-color: var(--pf-global--BackgroundColor--100, #fff);
   padding: var(--pf-global--spacer--md, 1rem) var(--pf-global--spacer--md, 1rem);
   box-shadow: var(--pf-c-page--section--m-sticky-top--BoxShadow, var(--pf-global--BoxShadow--sm-bottom, 0 0.125rem 0.25rem -0.0625rem rgba(3, 3, 3, 0.16)));
 }
+
+#overview-content {
+  background-color:
+  var(
+    --pf-c-page__main-section--BackgroundColor,
+    var(
+      --pf-c-page__main-section--m-light-100--BackgroundColor,
+      var(--pf-global--BackgroundColor--150, #fafafa)));
+} 
 
 /* Not an ideal selector... hacking away */
 section.band:not(#component-list):not(#lightw):not(#univ):not(.accent):not(.small) {
@@ -278,11 +282,24 @@ header.band h1 {
   margin-top: 0;
 }
 
+.example-preview:not(pf-*) {
+  padding: var(--pf-global--spacer--md, 1rem);
+  background-color: var(--pf-global--BackgroundColor--100, #fff);
+  border-bottom: var(--pf-global--BorderWidth--sm, 1px) solid var(--pf-global--BorderColor--300, #f0f0f0);
+  transition: width .2s ease-in-out;
+}
+
 main.basic,
 main.blog {
   margin-top: 6.5rem;
   margin-bottom: 3.75rem;
   flex-grow: 1;
+  background-color:
+  var(
+    --pf-c-page__main-section--BackgroundColor,
+    var(
+      --pf-c-page__main-section--m-light-100--BackgroundColor,
+      var(--pf-global--BackgroundColor--150, #fafafa)));
 }
 
 #home-title img {
